force-app/main/default/objects/MS_Azure_Configuration__mdt/MS_Azure_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>MS Azure Configuration</label>
    <pluralLabel>MS Azure Configurations</pluralLabel>
</CustomObject>