force-app/main/default/objects/MS_Azure_Configuration__mdt/fields/Subscription_Key__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Key__c</fullName>
    <label>Subscription Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>