force-app/main/default/objects/MS_Azure_Configuration__mdt/fields/Subscription_Region__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Region__c</fullName>
    <label>Subscription Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>