force-app/main/default/objects/MS_Azure_Configuration__mdt/fields/Translate_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Translate_Endpoint__c</fullName>
    <label>Translate Endpoint</label>
    <type>Url</type>
</CustomField>