force-app/main/default/objects/MS_Azure_Configuration__mdt/fields/Transliterate_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Transliterate_Endpoint__c</fullName>
    <label>Transliterate Endpoint</label>
    <type>Url</type>
</CustomField>